--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a href="#portfolio" style="--i:4">Work for</a>
             <a href="#contact" style="--i:5">Contact</a>
         </nav>
-        <button class="themeColorBtn" area-label="Toggle Swtich" onclick="toggleThemeColor()">
+        <button class="themeColorBtn" aria-label="Toggle Swtich" onclick="toggleThemeColor()">
             <span class="dark"><i class="fa-solid fa-lightbulb"></i></span>
             <span class="light"><i class="fa-regular fa-lightbulb"></i></span>
         </button>
@@ -81,11 +81,11 @@
             <span class="hText"><span id="text"></span></span>
             <p>I am a Senior UI Developer (Frontend Developer) and Graphic Designer with extensive experience of 11 years 8 months</p>
             <div class="home-sci">
-                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" area-label="Email Contact" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
-                <a href="https://linkedin.com/in/asif-aleem-99aa7516a" area-label="LinkedIn" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#contact" style="--i:7" area-label="Contact form"><i class="fa-solid fa-address-book"></i></a>
-                <a href="https://wa.me/917518969778" style="--i:7" target="_blank" area-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
-                <a href="tel:+919625068126" style="--i:7" target="_blank" area-label="Contact number"><i class="fa-solid fa-phone"></i></a>
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" aria-label="Email Contact" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
+                <a href="https://linkedin.com/in/asif-aleem-99aa7516a" aria-label="LinkedIn" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#contact" style="--i:7" aria-label="Contact form"><i class="fa-solid fa-address-book"></i></a>
+                <a href="https://wa.me/917518969778" style="--i:7" target="_blank" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="tel:+919625068126" style="--i:7" target="_blank" aria-label="Contact number"><i class="fa-solid fa-phone"></i></a>
             </div>
             
             <a href="#about" class="btn-box">Who Am I</a>
@@ -101,7 +101,7 @@
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
-            <h4>Senior UI Developer</h4>
+            <span class="hFourText">Senior UI Developer</span>
             <p>I am senior UI Developer (Frontend Developer) and Graphic Designer currently working in US based company. I choose to be Frontend Developer because it was my passion. After my 10+2 (Intermediate) completion I decided to choose this field to become web designer and graphic designer and then I completed my Professional Diploma in Computer Application(PDCA) from F-Tec Institute. I have done Certificate course in Angular from Ducat. I have completed my Graduation(B.A Political Science) from VBS Purvanchal University in 2013. I am specialized in web designing and graphic designing. I have 11 years and 8 months experiance as UI Developer. I can change any template design in coding with help of HTML, CSS and Javascript. I have worked with many known companies.</p>
             <a href="#skill" class="btn-box">My Skills</a>
         </div>
@@ -284,13 +284,13 @@
         <div class="contact-text">
             <h2>Contact <span>Me</span></h2>
             <div style="text-align: center;">
-                <h5>You can contact me to fill the form and also you can connect me through social media as social link given below.</h5>
+                <p class="subText">You can contact me to fill the form and also you can connect me through social media as social link given below.</p>
                 <div class="home-sci">
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" area-label="Email Contact" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="https://linkedin.com/in/asif-aleem-99aa7516a" area-label="LinkedIn" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="#contact" style="--i:7" area-label="Contact form"><i class="fa-solid fa-address-book"></i></a>
-                    <a href="https://wa.me/917518969778" style="--i:7" target="_blank" area-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href="tel:+919625068126" style="--i:7" target="_blank" area-label="Contact number"><i class="fa-solid fa-phone"></i></a>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" aria-label="Email Contact" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="https://linkedin.com/in/asif-aleem-99aa7516a" aria-label="LinkedIn" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#contact" style="--i:7" aria-label="Contact form"><i class="fa-solid fa-address-book"></i></a>
+                    <a href="https://wa.me/917518969778" style="--i:7" target="_blank" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="tel:+919625068126" style="--i:7" target="_blank" aria-label="Contact number"><i class="fa-solid fa-phone"></i></a>
                 </div>
             </div>
         </div>
@@ -309,9 +309,9 @@
         <p>Developed by Asif Aleem @2024</p>
     </div>
     <div class="whatsAppChat">
-        <a href="https://wa.me/917518969778" target="_blank" area-label="WhatsApp Contact"><i class="fa-brands fa-square-whatsapp"></i></a>
+        <a href="https://wa.me/917518969778" target="_blank" aria-label="WhatsApp Contact"><i class="fa-brands fa-square-whatsapp"></i></a>
     </div>
-    <button onclick="topFunction()" id="myBtn" title="Go to top" area-label="Go to top">
+    <button onclick="topFunction()" id="myBtn" title="Go to top" aria-label="Go to top">
         <i class="fa-solid fa-arrow-up"></i>
     </button>
     <!-- <div class="blinking active" id="blinkColorMode"></div> -->
