--- a/img/venia/index.html
+++ b/img/venia/index.html
@@ -68,7 +68,7 @@
     </section>
     
     <!-- Load More button -->
-    <div class="load-more-container"><button class="load-more" id="load-more" style="display:none;">Load More</button></div>
+    <div class="load-more-container"><button class="load-more" id="load-more" style="display:none;">Load More Products</button></div>
     
     <!-- Footer section -->
     <footer>
