Update some mobile view UI and enhance UI

--- a/index.html
+++ b/index.html
@@ -64,8 +64,14 @@
             <a href="#contact" style="--i:5">Contact</a>
         </nav>
         <button class="themeColorBtn" aria-label="Toggle Swtich" onclick="toggleThemeColor()">
-            <span class="dark"><i class="fa-solid fa-lightbulb"></i></span>
-            <span class="light"><i class="fa-regular fa-lightbulb"></i></span>
+            <span class="dark">
+                <i class="fa-solid fa-lightbulb"></i>
+                <span class="mode-text">Dark Mode</span>
+            </span>
+            <span class="light">
+                <i class="fa-regular fa-lightbulb"></i>
+                <span class="mode-text">Light Mode</span>
+            </span>
         </button>
     </header>
     <section class="home" id="home">
@@ -172,18 +178,9 @@
                     </div>
                 </div>
                 <div class="bar">
-                    <!-- <span class="material-symbols-outlined">javascript</span> -->
-                    <div class="info">
-                        <span>Java Script</span>
-                    </div>
-                    <div class="progress-line JavaScript">
-                        <span></span>
-                    </div>
-                </div>
-                <div class="bar">
                     <!-- <span class="material-symbols-outlined">html</span> -->
                     <div class="info">
-                        <span>jQuery / jQuery Mobile</span>
+                        <span>Java Script / jQuery / jQuery Mobile</span>
                     </div>
                     <div class="progress-line JQuery">
                         <span></span>
@@ -207,7 +204,15 @@
                         <span></span>
                     </div>
                 </div>
-
+                <div class="bar">
+                    <!-- <span class="material-symbols-outlined">html</span> -->
+                    <div class="info">
+                        <span>Photoshop / FIGMA / Illustrator</span>
+                    </div>
+                    <div class="progress-line graphic">
+                        <span></span>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="container">
@@ -314,6 +319,26 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top" aria-label="Go to top">
         <i class="fa-solid fa-arrow-up"></i>
     </button>
+    <div class="m-view-social-icons">
+        <div class="">
+            <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=asifaleemkhan@gmail.com" aria-label="Email Contact" target="_blank" style="--i:7" title="Email">
+                <i class="fa-regular fa-envelope"></i>
+                <span class="icon-text">E-mail</span>
+            </a>
+            <a href="https://linkedin.com/in/asif-aleem-99aa7516a" aria-label="LinkedIn" style="--i:7" target="_blank" title="linkedIn">
+                <i class="fa-brands fa-linkedin-in"></i>
+                <span class="icon-text">LinkedIn</span>
+            </a>
+            <a href="https://wa.me/917518969778" style="--i:7" target="_blank" aria-label="WhatsApp">
+                <i class="fa-brands fa-whatsapp"></i>
+                <span class="icon-text">WhatsApp</span>
+            </a>
+            <a href="tel:+919625068126" style="--i:7" target="_blank" aria-label="Contact number">
+                <i class="fa-solid fa-phone"></i>
+                <span class="icon-text">Call</span>
+            </a>
+        </div>
+    </div>
     <!-- <div class="blinking active" id="blinkColorMode"></div> -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="js/main.js"></script>
