--- a/Dr-gauhar-azad/index.html
+++ b/Dr-gauhar-azad/index.html
@@ -144,7 +144,7 @@
     </section>
     <section id="book-appointment" class="book-appointment d-flex flex-column vh-100">
         <div class="col-sm-12 d-flex justify-content-center">
-            <div class="col-sm-12 position-relative">
+            <div class="col-sm-10 offset-md-2 position-relative">
                 <img src="img/gauhar-azad-2.png" class="book-appointment-img">
                 <div class="bg-dark col-8 form-container">
                     <h3 class="heading">BOOK APPOINTMENT</h3>
@@ -214,9 +214,9 @@
                         <span> demo@gmail.com</span>
                     </p>
                     <p class="fs14 mb-2">
-                        <span class="d-flex justify-content-center align-items-center">
-                            <i class="fa-solid fa-location-dot pe-1"></i>
-                            <span class="ms-2 ">Demo location, Malviya Nagar, New Delhi - 110017</span>
+                        <span class="d-flex align-items-center">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <span style="display:inline-block; width:calc(100% - 20px); padding-left:10px; vertical-align:middle;">Demo location, Malviya Nagar, New Delhi - 110017</span>
                         </span>
                     </p>
                 </div>
