Fix some resposnive UI issues

--- a/Dr-gauhar-azad/index.html
+++ b/Dr-gauhar-azad/index.html
@@ -154,7 +154,7 @@
                                 <label for="name">Full Name</label>
                                 <input type="text" class="form-control" id="name" placeholder="Enter full name" name="name">
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-sm-6 m-view-hidden">
                                 <label for="email"> Email</label>
                                 <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
                             </div>
@@ -223,5 +223,25 @@
             </div>
         </div>
     </footer>
+    <div class="m-view-social-icons">
+        <div class="">
+            <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=asifaleemkhan@gmail.com" aria-label="Email Contact" target="_blank" style="--i:7" title="Email">
+                <i class="fa-regular fa-envelope"></i>
+                <span class="icon-text">E-mail</span>
+            </a>
+            <a href="https://linkedin.com/in/asif-aleem-99aa7516a" aria-label="LinkedIn" style="--i:7" target="_blank" title="linkedIn">
+                <i class="fa-brands fa-linkedin-in"></i>
+                <span class="icon-text">LinkedIn</span>
+            </a>
+            <a href="https://wa.me/917518969778" style="--i:7" target="_blank" aria-label="WhatsApp">
+                <i class="fa-brands fa-whatsapp"></i>
+                <span class="icon-text">WhatsApp</span>
+            </a>
+            <a href="tel:+919625068126" style="--i:7" target="_blank" aria-label="Contact number">
+                <i class="fa-solid fa-phone"></i>
+                <span class="icon-text">Call</span>
+            </a>
+        </div>
+    </div>
     </body>
 </html>
