Fix responsive issues

--- a/Dr-gauhar-azad/index.html
+++ b/Dr-gauhar-azad/index.html
@@ -85,7 +85,7 @@
           
           <!-- About section -->
            <div class="container-fluid about-section" id="about">
-                <div class="container p-5">
+                <div class="container pt-4 pb-4 ps-2 pe-2">
                     <div class="row">
                         <div class="col-sm">
                             <img src="img/about-dr-gauhar-azad.jpg" class="about-img">
@@ -182,19 +182,19 @@
         </div>
     </section>
     <footer>
-        <div class="container pt-4 pb-4" id="contact">
-            <div class="row ">
-                <div class="col-sm-3">
+        <div class="container pb-4" id="contact">
+            <div class="row">
+                <div class="col-sm-3 pt-4">
                     <h4 class="mr-b-0">Dr. Gauhar Azad</h4>
                     <p class="mb-2 lead fs16">Director & Chief Consultant at Azad Ventures</p>
                     <p class="fs14">Dr. Gauhar Azad is a Doctor and has an experience of 16 years in this field. He completed MD - Physician from Odessa State Medical University, Odessa in 2008.</p>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6 pt-4">
                     <div class="col-sm-12 text-center">
                         <img src="img/gauhar-azad-3.jpg" height="100" />
-                        <div class="col-sm-12">
-                            <span>Follow Me:</span>
-                            <span>
+                        <div class="col-sm-12 pt-3">
+                            <span>Follow Me</span>
+                            <span class="social-icon">
                                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
                                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                                 <a href="#"><i class="fa-brands fa-youtube"></i></a>
@@ -203,7 +203,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 pt-4">
                     <h4 class="mb-3">Contact</h4>
                     <p class="fs14 mb-2 mt-2">
                         <span class="me-1"><i class="fa-solid fa-phone"></i></span>
