Make content SEO Friendly

--- a/index.html
+++ b/index.html
@@ -108,7 +108,15 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <span class="hFourText">Senior UI Developer</span>
-            <p>I am senior UI Developer (Frontend Developer) and Graphic Designer currently working in US based company. I choose to be Frontend Developer because it was my passion. After my 10+2 (Intermediate) completion I decided to choose this field to become web designer and graphic designer and then I completed my Professional Diploma in Computer Application(PDCA) from F-Tec Institute. I have done Certificate course in Angular from Ducat. I have completed my Graduation(B.A Political Science) from VBS Purvanchal University in 2013. I am specialized in web designing and graphic designing. I have 11 years and 8 months experiance as UI Developer. I can change any template design in coding with help of HTML, CSS and Javascript. I have worked with many known companies.</p>
+            <p>Highly skilled Senior UI Developer with a proven track record of 11+ years in crafting visually stunning and user-friendly web interfaces.
+                Proficient in HTML, CSS, and JavaScript to transform design concepts into functional, responsive web applications.
+                Expertise in Angular framework for building dynamic, scalable, and maintainable web solutions.
+                Passionate about leveraging design principles to create engaging user experiences.</p>
+            <h3>Technical Skills</h3>
+            <p class="mr-b-8"><span class="bold">Frontend Development:</span> HTML5, CSS3, JavaScript, PHP, TypeScript, Angular, React,Bootstrap, Tailwind CSS, JQuery, Word Press </p>
+            <p class="mr-b-8"><span class="bold">Design Tools:</span> Adobe Photoshop, Illustrator, Figma, InVision, Corel Draw</p>
+            <p class="mr-b-8"><span class="bold">Digital MArketing</span> SEO, Google Analytics, Mircrosoft Analytics (Webmaster Tools)</p>
+            <p class="mr-b-8"><span class="bold">Version Control:</span> Git</p>
             <a href="#skill" class="btn-box">My Skills</a>
         </div>
     </div>
@@ -121,19 +129,19 @@
                 <div>
                     <span><i class="fa-regular fa-newspaper"></i></span>
                     <h2>Website Design</h2>
-                    <p>I work on multiple website and design them by myself. Make CRM website design and maintain large backend website.Make E-Commerce website Khoobsurati.com. I also work on WordPrees. Cureently I am working on which company I make SaaS software for them and work on that website only by myself I am single UI developer there.  </p>
+                    <p>I work on multiple websites and design them by myself. Make CRM website designs and maintain large backend websites. Make e-commerce websites, Khoobsurati.com. I also work on WordPrees. Currently, I am working with a US-based organization. I work on SaaS software and work on that website alone.</p>
                     <!-- <a href="#" class="read">Learn more</a> -->
                 </div>
                 <div>
                     <span><i class="fa-solid fa-envelope"></i></span>
                     <h2>Email Design</h2>
-                    <p>I have design too many emailer for multiple companies. I make them work UI and UX both for them. Make responsive and browser compatible. And make all the design user friendly and responsive. Also make emailer to keep in mind that it should be fit exact in gmail and outlook properly. </p>
+                    <p>I have designed too many emails for multiple companies. I make them work UI and UX both for them. Make responsive and browser compatible. And make all the design user-friendly and responsive. Also make an email to keep in mind that it should fit exactly in Gmail and Outlook properly.</p>
                     <!-- <a href="#" class="read">Learn more</a> -->
                 </div>
                 <div>
                     <span><i class="fa-solid fa-pen-ruler"></i></span>
                     <h2>Graphic Design</h2>
-                    <p>I make to many template design in Photoshop. I also make some print able design in Corel Draw. I have worked on Figma, Invision, Zero Height, Adobe Illustrator Graphic design tools. I have work 1 year and 1 month as a Graphic designer and Web designer in my first company.</p>
+                    <p>I make too many template designs in Photoshop. I also make some printable designs in Corel Draw. I have worked on Figma, Invision, Zero Height, and Adobe Illustrator graphic design tools. I have worked 1 year and 1 month as a graphic designer and web designer for my first company.</p>
                     <!-- <a href="#" class="read">Learn more</a> -->
                 </div>
             </div>
