Do some changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       }  
     }
     </script>
-<body id="themeColorMode" class="active">
+<body id="themeColorMode">
     <header class="header">
         <a href="#home" class="logo">Asif Aleem</a>
         <span class="iconToggle" id="iconToggle" onclick="toggleNav(this)">
@@ -75,9 +75,9 @@
         </button>
     </header>
     <section class="home" id="home">
-        <div class="animatedBox">
+        <!-- <div class="animatedBox">
             <div>HTML</div><div>CSS</div><div>Java Script</div><div>React Js</div><div>Bootstrap</div><div>Angular</div><div>SEO</div><div>Digital Marketing</div><div>Responsive</div><div>Tailwind CSS</div><div>Photoshop</div><div>PHP</div><div>Frontend Developer</div>
-        </div>
+        </div> -->
         <div class="profile-pic">
             <img src="img/asif-circle-img.png" alt="Asif Aleem Senior UI Developer" />
         </div>
@@ -96,6 +96,7 @@
             
             <a href="#about" class="btn-box">Who Am I</a>
         </div>
+        <canvas id="dotsCanvas"></canvas>
     </section>
     <section id="about" class="p-relative">
         <div class="animatedBox">
