--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" aria-label="Email Contact" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
                 <a href="https://linkedin.com/in/asif-aleem-99aa7516a" aria-label="LinkedIn" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="#contact" style="--i:7" aria-label="Contact form"><i class="fa-solid fa-address-book"></i></a>
-                <a href="https://wa.me/917518969778" style="--i:7" target="_blank" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://wa.me/+919625068126" style="--i:7" target="_blank" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="tel:+919625068126" style="--i:7" target="_blank" aria-label="Contact number"><i class="fa-solid fa-phone"></i></a>
             </div>
             
@@ -128,19 +128,25 @@
             <h1 class="sub-title">My <span>Services</span></h1>
             <div class="services-list">
                 <div>
-                    <span><i class="fa-regular fa-newspaper"></i></span>
+                    <span><i class="fa-solid fa-code"></i></span>
                     <h2>Website Design</h2>
-                    <p>I work on multiple websites and design them by myself. Make CRM website designs and maintain large backend websites. Make e-commerce websites, Khoobsurati.com. I also work on WordPrees. Currently, I am working with a US-based organization. I work on SaaS software and work on that website alone.</p>
+                    <p>I work on multiple websites and design them by myself. Make CRM website designs and maintain large backend websites. Make e-commerce websites. I also work on WordPrees. Currently, I am working with a US-based organization which are using SaaS software. Make websites user user-friendly and SEO friendly.</p>
                     <!-- <a href="#" class="read">Learn more</a> -->
                 </div>
                 <div>
-                    <span><i class="fa-solid fa-envelope"></i></span>
+                    <span><i class="fa-regular fa-envelope"></i></span>
                     <h2>Email Design</h2>
-                    <p>I have designed too many emails for multiple companies. I make them work UI and UX both for them. Make responsive and browser compatible. And make all the design user-friendly and responsive. Also make an email to keep in mind that it should fit exactly in Gmail and Outlook properly.</p>
+                    <p>I have designed too many emails for multiple companies. I make them work UI and UX both for them. Make responsive and browser compatible. And make all the design user-friendly and responsive. When I make emailer for organization I always keep in mind that it should exactly fit in Gmail and Outlook.</p>
                     <!-- <a href="#" class="read">Learn more</a> -->
                 </div>
                 <div>
-                    <span><i class="fa-solid fa-pen-ruler"></i></span>
+                    <span><i class="fa-regular fa-file-code"></i></span>
+                    <h2>Web Development</h2>
+                    <p>For backend work I use PHP and JavaScript. Activate forms by using PHP. Fetch API Data dynamically with help of JavaScript. I also Host Websites on Live Server. Track users activity on live website with help of Google Analytics.</p>
+                    <!-- <a href="#" class="read">Learn more</a> -->
+                </div>
+                <div>
+                    <span><i class="fa-solid fa-palette"></i></span>
                     <h2>Graphic Design</h2>
                     <p>I make too many template designs in Photoshop. I also make some printable designs in Corel Draw. I have worked on Figma, Invision, Zero Height, and Adobe Illustrator graphic design tools. I have worked 1 year and 1 month as a graphic designer and web designer for my first company.</p>
                     <!-- <a href="#" class="read">Learn more</a> -->
@@ -289,6 +295,9 @@
                 <span>
                     <img src="img/company-logo/ostendio.webp" alt="ostendio logo" height="30">
                 </span>
+                <span style="background: #0f4180; padding:5px;">
+                    <img src="img/company-logo/fintellimart.png" alt="fintellimart logo" height="30">
+                </span>
             </div>
         </div>
     </div>
@@ -303,7 +312,7 @@
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" aria-label="Email Contact" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
                     <a href="https://linkedin.com/in/asif-aleem-99aa7516a" aria-label="LinkedIn" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="#contact" style="--i:7" aria-label="Contact form"><i class="fa-solid fa-address-book"></i></a>
-                    <a href="https://wa.me/917518969778" style="--i:7" target="_blank" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://wa.me/+919625068126" style="--i:7" target="_blank" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
                     <a href="tel:+919625068126" style="--i:7" target="_blank" aria-label="Contact number"><i class="fa-solid fa-phone"></i></a>
                 </div>
             </div>
@@ -323,7 +332,7 @@
         <p>Developed by Asif Aleem @2024</p>
     </div>
     <div class="whatsAppChat">
-        <a href="https://wa.me/917518969778" target="_blank" aria-label="WhatsApp Contact"><i class="fa-brands fa-square-whatsapp"></i></a>
+        <a href="https://wa.me/+919625068126" target="_blank" aria-label="WhatsApp Contact"><i class="fa-brands fa-square-whatsapp"></i></a>
     </div>
     <button onclick="topFunction()" id="myBtn" title="Go to top" aria-label="Go to top">
         <i class="fa-solid fa-arrow-up"></i>
@@ -338,7 +347,7 @@
                 <i class="fa-brands fa-linkedin-in"></i>
                 <span class="icon-text">LinkedIn</span>
             </a>
-            <a href="https://wa.me/917518969778" style="--i:7" target="_blank" aria-label="WhatsApp">
+            <a href="https://wa.me/+919625068126" style="--i:7" target="_blank" aria-label="WhatsApp">
                 <i class="fa-brands fa-whatsapp"></i>
                 <span class="icon-text">WhatsApp</span>
             </a>
