Add some SEO friendly content

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="home-content">
             <span class="hText">Hello, Myself</span>
-            <h1>Asif Aleem</h1>
+            <h1>Asif Aleem Senior UI Developer</h1>
             <span class="hText"><span id="text"></span></span>
             <p>I am a Senior UI Developer (Frontend Developer) and Graphic Designer with extensive experience of 11 years 8 months</p>
             <div class="home-sci">
@@ -107,8 +107,8 @@
             <img src="img/about.svg" alt="Asif Aleem Senior UI Developer" />
         </div>
         <div class="about-text">
-            <h2>About <span>Me</span></h2>
-            <span class="hFourText">Senior UI Developer</span>
+            <div class="aboutMe">About <span>Me</span></div>
+            <h2 class="hFourText">Senior UI Developer</h2>
             <p>Highly skilled Senior UI Developer with a proven track record of 11+ years in crafting visually stunning and user-friendly web interfaces.
                 Proficient in HTML, CSS, and JavaScript to transform design concepts into functional, responsive web applications.
                 Expertise in Angular framework for building dynamic, scalable, and maintainable web solutions.
@@ -125,29 +125,29 @@
     <section class="services" id="services">
         <div class="reveal">
         <div class="container">
-            <h1 class="sub-title">My <span>Services</span></h1>
+            <h3 class="sub-title">My <span>Services</span></h3>
             <div class="services-list">
                 <div>
                     <span><i class="fa-solid fa-code"></i></span>
-                    <h2>Website Design</h2>
+                    <h3>Website Design</h3>
                     <p>I work on multiple websites and design them by myself. Make CRM website designs and maintain large backend websites. Make e-commerce websites. I also work on WordPrees. Currently, I am working with a US-based organization which are using SaaS software. Make websites user user-friendly and SEO friendly.</p>
                     <!-- <a href="#" class="read">Learn more</a> -->
                 </div>
                 <div>
                     <span><i class="fa-regular fa-envelope"></i></span>
-                    <h2>Email Design</h2>
+                    <h3>Email Design</h3>
                     <p>I have designed too many emails for multiple companies. I make them work UI and UX both for them. Make responsive and browser compatible. And make all the design user-friendly and responsive. When I make emailer for organization I always keep in mind that it should exactly fit in Gmail and Outlook.</p>
                     <!-- <a href="#" class="read">Learn more</a> -->
                 </div>
                 <div>
                     <span><i class="fa-regular fa-file-code"></i></span>
-                    <h2>Web Development</h2>
+                    <h3>Web Development</h3>
                     <p>For backend work I use PHP and JavaScript. Activate forms by using PHP. Fetch API Data dynamically with help of JavaScript. I also Host Websites on Live Server. Track users activity on live website with help of Google Analytics.</p>
                     <!-- <a href="#" class="read">Learn more</a> -->
                 </div>
                 <div>
                     <span><i class="fa-solid fa-palette"></i></span>
-                    <h2>Graphic Design</h2>
+                    <h3>Graphic Design</h3>
                     <p>I make too many template designs in Photoshop. I also make some printable designs in Corel Draw. I have worked on Figma, Invision, Zero Height, and Adobe Illustrator graphic design tools. I have worked 1 year and 1 month as a graphic designer and web designer for my first company.</p>
                     <!-- <a href="#" class="read">Learn more</a> -->
                 </div>
@@ -160,10 +160,10 @@
             <div class="animatedBox">
                 <div>HTML</div><div>CSS</div><div>Java Script</div><div>React Js</div><div>Bootstrap</div><div>Angular</div><div>SEO</div><div>Digital Marketing</div><div>Responsive</div><div>Tailwind CSS</div><div>Photoshop</div><div>PHP</div><div>Frontend Developer</div>
             </div>
-        <h1 class="sub-title">My <span>Skills</span></h1>
+        <h3 class="sub-title">My <span>Skills</span></h3>
         <div class="skillContainer">
         <div class="container">
-            <h1 class="heading">Technical Skills</h1>
+            <h3 class="heading">Technical Skills</h3>
             <div class="technical-bars">
                 <div class="bar">
                     <!-- <span class="material-symbols-outlined">html</span> -->
@@ -231,7 +231,7 @@
             </div>
         </div>
         <div class="container">
-            <h1 class="heading">Professional Skills</h1>
+            <h3 class="heading">Professional Skills</h3>
             <div class="" style="display: flex; flex-direction: column;">
                 <div class="radial-bars">
                     <div class="radial-bar">
@@ -275,7 +275,7 @@
     <section class="company-logo" id="portfolio">
         <div class="reveal">
         <div class="main-text">
-            <h2>I <span>Work For</span></h2>
+            <h3>I <span>Work For</span></h3>
             <div class="companies-logo">
                 <span>
                     <img src="img/company-logo/avv.webp" alt="avv logo" height="100">
@@ -295,7 +295,7 @@
                 <span>
                     <img src="img/company-logo/ostendio.webp" alt="ostendio logo" height="30">
                 </span>
-                <span style="background: #0f4180; padding:5px;">
+                <span style="background: #0f4180; padding:10px 16px; border-radius:8px;">
                     <img src="img/company-logo/fintellimart.png" alt="fintellimart logo" height="30">
                 </span>
             </div>
@@ -305,7 +305,7 @@
     <section class="" id="contact">
         <div class="reveal contact">
         <div class="contact-text">
-            <h2>Contact <span>Me</span></h2>
+            <h3>Contact <span>Me</span></h3>
             <div style="text-align: center;">
                 <p class="subText">You can contact me to fill the form and also you can connect me through social media as social link given below.</p>
                 <div class="home-sci">
