--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <a href="#skill" style="--i:3">Skills</a>
             <a href="#portfolio" style="--i:4">Work for</a>
             <a href="#contact" style="--i:5">Contact</a>
+            <a href="blog.html" style="--i:5">Blogs</a>
         </nav>
         <button class="themeColorBtn" aria-label="Toggle Swtich" onclick="toggleThemeColor()">
             <span class="dark">
@@ -85,11 +86,10 @@
             <span class="hText">Hello, Myself</span>
             <h1>Asif Aleem Senior UI Developer</h1>
             <span class="hText"><span id="text"></span></span>
-            <p>I am a Senior UI Developer (Frontend Developer) and Graphic Designer with extensive experience of 11 years 8 months</p>
+            <p>I am a Senior UI Developer (Frontend Developer) and Graphic Designer with extensive experience of 12+ years</p>
             <div class="home-sci">
-                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" aria-label="Email Contact" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan786@gmail.com" aria-label="Email Contact" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
                 <a href="https://linkedin.com/in/asif-aleem-99aa7516a" aria-label="LinkedIn" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#contact" style="--i:7" aria-label="Contact form"><i class="fa-solid fa-address-book"></i></a>
                 <a href="https://wa.me/+919625068126" style="--i:7" target="_blank" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="tel:+919625068126" style="--i:7" target="_blank" aria-label="Contact number"><i class="fa-solid fa-phone"></i></a>
             </div>
@@ -109,14 +109,14 @@
         <div class="about-text">
             <div class="aboutMe">About <span>Me</span></div>
             <h2 class="hFourText">Senior UI Developer</h2>
-            <p>Highly skilled Senior UI Developer with a proven track record of 11+ years in crafting visually stunning and user-friendly web interfaces.
+            <p>Highly skilled Senior UI Developer with a proven track record of 12+ years in crafting visually stunning and user-friendly web interfaces.
                 Proficient in HTML, CSS, and JavaScript to transform design concepts into functional, responsive web applications.
                 Expertise in Angular framework for building dynamic, scalable, and maintainable web solutions.
                 Passionate about leveraging design principles to create engaging user experiences.</p>
             <h3>Technical Skills</h3>
             <p class="mr-b-8"><span class="bold">Frontend Development:</span> HTML5, CSS3, JavaScript, PHP, TypeScript, Angular, React,Bootstrap, Tailwind CSS, JQuery, Word Press </p>
             <p class="mr-b-8"><span class="bold">Design Tools:</span> Adobe Photoshop, Illustrator, Figma, InVision, Corel Draw</p>
-            <p class="mr-b-8"><span class="bold">Digital MArketing</span> SEO, Google Analytics, Mircrosoft Analytics (Webmaster Tools)</p>
+            <p class="mr-b-8"><span class="bold">Digital MArketing,</span> SEO, Video Editing, Google Analytics, Mircrosoft Analytics (Webmaster Tools)</p>
             <p class="mr-b-8"><span class="bold">Version Control:</span> Git</p>
             <a href="#skill" class="btn-box">My Skills</a>
         </div>
@@ -281,9 +281,6 @@
                     <img src="img/company-logo/avv.webp" alt="avv logo" height="100">
                 </span>
                 <span>
-                    <img src="img/company-logo/khoobsurati.jpg" alt="khoobsurati logo" height="80">
-                </span>
-                <span>
                     <img src="img/company-logo/jetways.jpg" alt="jetways logo" height="50">
                 </span>
                 <span>
@@ -296,7 +293,11 @@
                     <img src="img/company-logo/ostendio.webp" alt="ostendio logo" height="30">
                 </span>
                 <span style="background: #0f4180; padding:10px 16px; border-radius:8px;">
-                    <img src="img/company-logo/fintellimart.png" alt="fintellimart logo" height="30">
+                    <a href="https://fintellimart.com/" target="_blank"><img src="img/company-logo/fintellimart.png" alt="fintellimart logo" height="30"></a>
+                </span>
+                
+                <span>
+                    <a href="https://www.thesamsaraholidays.com/" target="_blank"><img src="img/company-logo/The-Samsara-Holidays.png" alt="The Samsara Holidays Pvt Ltd" height="50"></a>
                 </span>
             </div>
         </div>
@@ -309,15 +310,14 @@
             <div style="text-align: center;">
                 <p class="subText">You can contact me to fill the form and also you can connect me through social media as social link given below.</p>
                 <div class="home-sci">
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" aria-label="Email Contact" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan786@gmail.com" aria-label="Email Contact" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
                     <a href="https://linkedin.com/in/asif-aleem-99aa7516a" aria-label="LinkedIn" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="#contact" style="--i:7" aria-label="Contact form"><i class="fa-solid fa-address-book"></i></a>
                     <a href="https://wa.me/+919625068126" style="--i:7" target="_blank" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
                     <a href="tel:+919625068126" style="--i:7" target="_blank" aria-label="Contact number"><i class="fa-solid fa-phone"></i></a>
                 </div>
             </div>
         </div>
-        <div class="contact-form">
+        <!-- <div class="contact-form">
             <form id="loginForm" method="POST" action="sendmail.php">
                 <input type="text" placeholder="Enter you name" id="userName" name="userName" />
                 <input type="email" placeholder="Enter you email" id="email" name="email" />
@@ -325,11 +325,11 @@
                 <textarea id="name" cols="40" rows="10" placeholder="Enter you details" name="name"></textarea>
                 <button type="submit" value="submit" class="send">Submit</button>
             </form>
-        </div>
+        </div> -->
     </div>
     </section>
     <div class="last-text">
-        <p>Developed by Asif Aleem @2024</p>
+        <p>Developed by Asif Aleem @2025</p>
     </div>
     <div class="whatsAppChat">
         <a href="https://wa.me/+919625068126" target="_blank" aria-label="WhatsApp Contact"><i class="fa-brands fa-square-whatsapp"></i></a>
