--- a/blogs/Understanding-UI-UX-Design.html
+++ b/blogs/Understanding-UI-UX-Design.html
@@ -96,7 +96,7 @@
                     <p class="blog-pragraph-text">In this blog, we'll explore the differences between UI and UX design, why they're crucial for product success, and best practices to create engaging digital experiences.</p>
                     <h2>What is UI Design?</h2>
                     <p class="blog-pragraph-text">UI stands for User Interface. It refers to the visual elements that users interact with when using an application or website. UI design focuses on the layout, design, and interactive elements that make up the product’s interface. It includes buttons, icons, typography, color schemes, menus, and any other visual elements.</p>
-                    <h3>Key Aspects of UI Design:</h3>
+                    <h2>Key Aspects of UI Design:</h2>
                     <ul>
                         <li><b>Visual Design:</b> This is about how the user interface looks. Colors, fonts, iconography, and overall aesthetics play a role in creating a visually appealing experience.</li>
                         <li><b>Interactivity:</b> UI design considers how users interact with these visual elements (e.g., clicking buttons, hovering over links, dragging sliders).</li>
@@ -106,7 +106,7 @@
 
                     <h2>What is UX Design?</h2>
                     <p class="blog-pragraph-text">UX stands for User Experience. It focuses on the overall experience users have when interacting with a product, system, or service. UX design is concerned with understanding the user’s journey, addressing their needs, and ensuring the product is user-friendly, efficient, and enjoyable to use. It's less about visual appeal and more about usability, accessibility, and the emotions users experience while using the product.</p>
-                    <p class="blog-pragraph-text">Key Aspects of UX Design:</p>
+                    <h2 class="blog-pragraph-text">Key Aspects of UX Design:</h2>
                     <ul>
                         <li><b>Research:</b> UX designers conduct extensive research to understand the target audience, their pain points, needs, and behaviors. This helps ensure that the product addresses real user problems.</li>
                         <li><b>User Journey Mapping:</b> Creating a map of the user’s journey through the product helps designers identify the various touchpoints and ensure smooth navigation.</li>
@@ -133,7 +133,7 @@
                         </li>
                         <li>3. Brand Trust and Loyalty
                             <br>
-                            A product that’s well-designed not only works better but also conveys a sense of professionalism and reliability. Users are more likely to trust and engage with brands that offer intuitive and aesthetically pleasing designs.
+                            A product that's well-designed not only works better but also conveys a sense of professionalism and reliability. Users are more likely to trust and engage with brands that offer intuitive and aesthetically pleasing designs.
                         </li>
                         <li>4. Reduced Development Costs
                             <br>
