--- a/blogs/Understanding-UI-UX-Design.html
+++ b/blogs/Understanding-UI-UX-Design.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta hhtp-equiv="X-UA-COMPATIBLE" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>Understanding UI-UX Design</title>
-    <meta name="description" content="In today's digital world, where users navigate through an overwhelming number of apps and websites, the importance of design in crafting intuitive and smooth user experiences is more essential than ever ..." />
+    <title>Understanding UI/UX Design: What is UI/UX Design?</title>
+    <meta name="description" content="In today's digital world, where users navigate through an overwhelming number of apps and websites, the importance of design in crafting intuitive ..." />
     <meta name="keywords" content="Responsive Web Designer, Frontend Developer, UI Developer, Web Designer in Delhi, Graphic Designer in Delhi" />
     <meta name="author" content="Asif Aleem">
     <meta name="copyright" content="Copyright © Asif Aleem">
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
     <meta property="og:title" content="Understanding UI/UX Design: What is UI/UX Design?" />
-    <meta property="og:description" content="In today's digital world, where users navigate through an overwhelming number of apps and websites, the importance of design in crafting intuitive and smooth user experiences is more essential than ever ..." />
+    <meta property="og:description" content="In today's digital world, where users navigate through an overwhelming number of apps and websites, the importance of design in crafting intuitive ..." />
     <meta property="og:url" content="https://asifaleem-del.github.io/portfolio/Understanding-UI-UX-Design.html" />
     <meta property="og:image" itemprop="image" content="https://asifaleem-del.github.io/portfolio/img/og-img.jpg" />
 </head>
