--- a/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html
+++ b/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta hhtp-equiv="X-UA-COMPATIBLE" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>The Importance of Responsive Design in the Modern Web Era | What is responsive design?</title>
-    <meta name="description" content="In the ever-evolving landscape of web design, responsive design has become a cornerstone of effective, user-friendly websites. With the rise of mobile devices and varied screen ..." />
+    <title>The Importance of Responsive Design in the Modern Web Era</title>
+    <meta name="description" content="In the ever-evolving landscape of web design, responsive design has become a cornerstone of effective, user-friendly websites ..." />
     <meta name="keywords" content="Responsive Web Designer, Frontend Developer, UI Developer, Web Designer in Delhi, Graphic Designer in Delhi" />
     <meta name="author" content="Asif Aleem">
     <meta name="copyright" content="Copyright © Asif Aleem">
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
-    <meta property="og:title" content="The Importance of Responsive Design in the Modern Web Era | What is responsive design?" />
-    <meta property="og:description" content="In the ever-evolving landscape of web design, responsive design has become a cornerstone of effective, user-friendly websites. With the rise of mobile devices and varied screen ..." />
+    <meta property="og:title" content="The Importance of Responsive Design in the Modern Web Era" />
+    <meta property="og:description" content="In the ever-evolving landscape of web design, responsive design has become a cornerstone of effective, user-friendly websites ..." />
     <meta property="og:url" content="https://asifaleem-del.github.io/portfolio/blog.html" />
     <meta property="og:image" itemprop="image" content="https://asifaleem-del.github.io/portfolio/img/og-img.jpg" />
 </head>
