--- a/blogs/Understanding-UI-UX-Design.html
+++ b/blogs/Understanding-UI-UX-Design.html
@@ -88,6 +88,23 @@
                             <h1>Understanding UI/UX Design: What is UI/UX Design?</h1>
                             <p class="date-text"><span>15 Jan 2025</span></p>
                         </div>
+                        <div class="social-share-container">
+                            <a href="#" class="facebook-btn" target="_blank">
+                                <i class="fa-brands fa-square-facebook"></i>
+                            </a>
+                            <a href="#" class="twitter-btn" target="_blank">
+                                <i class="fa-brands fa-square-x-twitter"></i>
+                            </a>
+                            <a href="#" class="WhatsApp-btn" target="_blank">
+                                <i class="fa-brands fa-square-whatsapp"></i>
+                            </a>
+                            <a href="#" class="telegram-btn" target="_blank">
+                                <i class="fa-brands fa-telegram"></i>
+                            </a>
+                            <a href="#" class="telegram-btn" target="_blank">
+                                <i class="fa-solid fa-square-share-nodes"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="text-contain">
@@ -228,6 +245,56 @@
             </a>
         </div>
     </div>
+    
+    <div class="toast">Message here</div>
     <script src="../js/main.js"></script>
+    <script>
+        const facebookBtn = document.querySelector(
+            ".social-share-container .facebook-btn"
+        );
+        const twitterBtn = document.querySelector(
+            ".social-share-container .twitter-btn"
+        );
+        const whatsAppBtn = document.querySelector(
+            ".social-share-container .whatsApp-btn"
+        );
+        const telegramBtn = document.querySelector(
+            ".social-share-container .telegram-btn"
+        );
+        const shareBtn = document.querySelector(
+            ".social-share-container .share-btn"
+        );
+
+        const toast = document.querySelector(".toast");
+
+        const url = encodeURIComponent(window.location.href);
+        const title = encodeURIComponent(document.title);
+        const shareLink = window.location.href;
+
+        facebookBtn.href = `https://www.facebook.com/sharer.php?u=${url}`;
+        twitterBtn.href = `https://twitter.com/intent/tweet?url=${url}&text=${title}`;
+        whatsAppBtn.href = `https://api.whatsapp.com/send?text=${title}:${url}`;
+        telegramBtn.href = `https://t.me/share/url?url=${url}&text=${title}`;
+
+        const displayToast = (message) => {
+            toast.textContent = message;
+            toast.classList.add("active");
+            setTimeout(() => {
+                toast.classList.remove("active");
+            }, 3000);
+        };
+
+        shareBtn.addEventListener("click", (e) => {
+            e.preventDefault();
+            navigator.clipboard
+            .writeText(shareLink)
+            .then(() => {
+                displayToast("Link copied");
+            })
+            .catch(() => displayToast("Error copying link"));
+        });
+
+
+    </script>
 </body>
 </html>
