--- a/blogs/Understanding-UI-UX-Design.html
+++ b/blogs/Understanding-UI-UX-Design.html
@@ -89,19 +89,19 @@
                             <p class="date-text"><span>15 Jan 2025</span></p>
                         </div>
                         <div class="social-share-container">
-                            <a href="#" class="facebook-btn" target="_blank">
+                            <a href="" class="facebook-btn" target="_blank">
                                 <i class="fa-brands fa-square-facebook"></i>
                             </a>
-                            <a href="#" class="twitter-btn" target="_blank">
+                            <a href="" class="twitter-btn" target="_blank">
                                 <i class="fa-brands fa-square-x-twitter"></i>
                             </a>
-                            <a href="#" class="WhatsApp-btn" target="_blank">
+                            <a href="" class="WhatsApp-btn" target="_blank">
                                 <i class="fa-brands fa-square-whatsapp"></i>
                             </a>
-                            <a href="#" class="telegram-btn" target="_blank">
+                            <a href="" class="telegram-btn" target="_blank">
                                 <i class="fa-brands fa-telegram"></i>
                             </a>
-                            <a href="#" class="telegram-btn" target="_blank">
+                            <a href="" class="telegram-btn" target="_blank">
                                 <i class="fa-solid fa-square-share-nodes"></i>
                             </a>
                         </div>
